# gamejam_2016

./: .gitignore  CMakeLists.txt  README.txt  SDL-Lesson16-rotat-fonts.vcxproj
Resources/levels/0/: 0.txt  0.txt.conf  1.txt  1.txt.conf  2.txt  2.txt.conf  3.txt  3.txt.conf  4.txt  4.txt.conf  5.txt  5.txt.conf  6.txt  6.txt.conf
Resources/levels/1/: 0.txt  13.txt  13.txt.conf  14.txt  14.txt.conf  15.txt.conf
src/: BossScreen.cpp  BossScreen.h  CMakeLists.txt  Character.cpp  Character.h  Enemy.cpp  Enemy.h  Equipment.cpp  Equipment.h  GlobalData.cpp  Item.cpp  Item.h  Player.cpp  Player.h  level.cpp  level.h  main.cpp  menuscene.cpp  menuscene.h  scene_game.cpp  scene_game.h  victoryscene.cpp
src/Engine/: AStar.cpp  Audio.h  CMakeLists.txt  Engine.cpp  Engine.h  PlayerInput.cpp  PlayerInput.h  RFont.cpp  RTexture.cpp  RTexture.h  StructsGlobal.h
src/MapLogic/: CMakeLists.txt  artifact.cpp  artifact.h  field.cpp  field.h  field_impl.h  generic_map.h  map.cpp  map.h  root_trap.cpp  root_trap.h  skull.cpp
